--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "require": {
         "php": "^5.6|>=7.0.8",
-        "symfony/property-access": "^3.4"
+        "symfony/property-access": "^3.4| ^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
