--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     },
     "require": {
         "php": "^5.6|>=7.0.8",
-        "symfony/property-access": "^3.4| ^4.0"
+        "symfony/property-access": "^3.4| ^4.0",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
